# vnstock

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README-en.md  README-vi.md  README.md  TODO.md  changes_log.md  ci.yaml  context7.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  pyproject.toml  pyproject.toml.testing  pytest.ini  requirements-windows.txt  requirements.txt  roadmap.md  setup.cfg  setup.py  sitemap.xml  vnstock-test_notebook.ipynb  vnstock_demo_index_all_functions_testing_2023_03_25.ipynb  vnstock_demo_index_all_functions_testing_2023_06_07.ipynb  vnstock_demo_index_all_functions_testing_2023_06_22.ipynb
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  TESTING.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yaml  báo-lỗi.md  feature_request.yaml  đề-xuất-tính-năng.md
.github/workflows/: backfill-history.yml  ci.yml  code-quality.yml  collect-financials.yml  collect-indices.yml  coverage-report.yml  daily-collector.yml  dashboard.yml  performance.yml  publish-vnstock-to-pypi.yml  test.yml  verify-api-key.yml
assets/data/: all_symbols.csv  industries_icb.csv  symbols_by_exchange.csv  symbols_by_industries.csv  vn30_symbols.csv
assets/embed/: candlestick_rsi_chart.html
blog/: index.html
changes_log/: index.html
chart/: index.html
cite/: index.html
community/contribute/: index.html
community/feedback/: index.html
community/join/: index.html
community/lan-toa-trai-nghiem-voi-vnstock/: index.html
community/support/: index.html
community/tai-tro-du-an-vnstock/: index.html
community/vnstock-contributors-thanh-vien-tich-cuc/: index.html
community/vnstock-road-map-lo-trinh-phat-trien-vnstock/: index.html
course/: index.html
data/: latest  listing_companies_enhanced-2023-06-17.csv  listing_companies_enhanced-2023.csv
data/2026-02-10/: all_symbols.csv  btmc_gold.csv  exchange_rate.csv  foreign_flow.csv  foreign_top_buy.csv  foreign_top_sell.csv  index_impact_negative.csv  index_impact_positive.csv  market_breadth.csv  price_board.csv  sjc_gold.csv  top_gainers.csv  top_losers.csv
data/indices/: HNX30.csv  HNXINDEX.csv  UPCOMINDEX.csv  VN100.csv  VN30.csv  VNCOND.csv  VNCONS.csv  VNDIAMOND.csv  VNENE.csv  VNFIN.csv  VNFINSELECT.csv  VNHEAL.csv  VNINDEX.csv  VNIT.csv  VNMAT.csv  VNMID.csv  VNREAL.csv  VNSML.csv  all_indices.csv
data/stocks/: AAA.csv  AAS.csv  ABB.csv  ABI.csv  ABT.csv  ABW.csv  ACB.csv  ACC.csv  ACG.csv  ACL.csv  ACV.csv  ADS.csv  AGG.csv  AGP.csv  AGR.csv  AIG.csv  ALC.csv  ANT.csv  ANV.csv  APF.csv  APG.csv  APH.csv  ASG.csv  ASM.csv  AST.csv  AVC.csv  BAB.csv  BAF.csv  BCA.csv  BCC.csv  BCF.csv  BCM.csv  BDG.csv  BFC.csv  BHA.csv  BHI.csv  BHN.csv  BIC.csv  BID.csv  BMI.csv  (+451 more)
demo/: gen2_vnstock_demo_index_all_functions_testing_2023.ipynb  gen2_vnstock_demo_index_all_functions_testing_2023_07_07.ipynb  vnstock_demo_index_all_functions_testing_2023_06_07.ipynb  vnstock_demo_index_all_functions_testing_2023_06_29.ipynb
dev/: cleanup.py  collect_schemas.py  finance_report_ratio_mapping_dict_vci.xlsx  generate_snapshot.py  tests_directory_init.py
disclaimer/: index.html
docs/: 0_vnstock3_demo_toc.ipynb  1_quickstart_stock_vietnam.ipynb  1_vietnam_stock_vnstock3.ipynb  2_international_market.ipynb  3_commodities_vnstock.ipynb  3_commodities_vnstock3.ipynb  4_funds_vnstock.ipynb  4_funds_vnstock3.ipynb  5_visualization_data_exploration_vnstock.ipynb  5_visualization_data_exploration_vnstock3.ipynb  6_quickstart_fmp_international.ipynb  CHANGELOG.md  COMPATIBILITY_MATRIX.md  FORK_MIGRATION_GUIDE.md  Gemfile  PORTFOLIO_ROBOADVISOR_GUIDE.md  PROXY_GUIDE.md  README-en.md  REMOVED_APIS.md  SCHEMA_SNAPSHOT.md  VNSTOCK_COMPARISON.md  _config.yml  changes_log.md  gen2_vnstock_demo_index_all_functions_testing_2023.ipynb  license.md  mkdocs.yml  pytesseract_ocr_demo.ipynb  quickstart_fmp_international.ipynb  quickstart_stock_vietnam.ipynb  secret_template.yml  ta_lib_colab_demo.ipynb  vnstock3_demo.ipynb
docs/.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  hotkeys.json  templates.json  workspace.json
docs/_doc/: charts.md  community.md  components.md  credits.md  faqs.md  index.md  legal.md  news.md  showcase.md  start.md
docs/_posts/: 2023-09-30-and-before.md  2023-10-05-version-1-0.md  2023-10-06-vnstock-docs.md  2023-10-10  2023-10-14.md
docs/docs/: changes_log.md  chart.md  cite.md  course.md  disclaimer.md  faqs.md  index.md  showcase.md  ta_lib_colab_demo.ipynb  trich-dan-va-giay-phep-su-dung-vnstock.md
docs/site/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  requirements.txt  sitemap.xml
examples/: fetch_stock_and_gold.py
faq/community/: index.html
faqs/: index.html
financial-dictionary/: index.html
scripts/: backfill_history.py  collect_commodity.py  collect_extras.py  collect_financials.py  collect_indices.py  collect_insights.py  collect_macro.py  collect_market.py  collect_stocks.py  daily_collector.py  db_cache.py  indicators.py  utils.py  vn_holidays.py
search/: search_index.json
showcase/: index.html
src/: vn_stock_listing_companies_2023-05-20.csv  vnstock_listing_companies_overview.csv
start/: index.html
stylesheets/: extra.css
tags/: index.html
tests/: ARCHITECTURE.md  README.md  TESTING_GUIDE.md  config.py  conftest.py  conftest_enhancements.py  plan.md  test_funds.py  test_notebook.ipynb
trich-dan-va-giay-phep-su-dung-vnstock/: index.html
vnstock/: __init__.py  base.py  chart.py  company.py  config.py  constants.py  derivative.py  economics.py  fundamental.py  funds.py  integration.py  market.py  mutual_funds.py  ocr.py  screener.py  stock.py  technical.py  trading.py  utils.py
vnstock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vnstock3/: __init__.py
vnstock3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vnstock_gg_sheet/: vnstock._appscript.js
(+608 files in other folders)
