# Build System Configuration
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# Metadata Information
[project]
name = "vnstock"
version = "3.2.3"
description = "A comprehensive and transparent solution for Vietnamese stock market analysis."
authors = [
    { name = "Thinh Vu", email = "vnstock.hq@gmail.com" },
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
urls = { Homepage = "https://github.com/thinh-vu/vnstock" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "vnai>=2.0",
    "openpyxl",
    "pydantic",
    "psutil",
    "fake_useragent",
    "vnstock_ezchart",
    "click",
    "seaborn",
    "tenacity"
]

# Dependency Management
[project.optional-dependencies]
dev = ["flake8"]
docs = ["sphinx", "sphinx_rtd_theme"]
test = ["unittest"]

[tool.poetry]
packages = [
    { include = "vnstock" },
]

[project.scripts]
vnstock = "vnstock.common.cli:cli"
