[metadata]
name = vnstock
version = 0.0.2
author = Thinh Vu
author_email = mrthinh@live.com
description = Vietnam Stock Market Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/public_repo/tree/main/vnstock
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
